# v-processor

./: ISA.py  LICENSE  README.md  integration_test.py  machine.py  pyproject.toml  test_machine.py  test_translator.py  translator.py
.github/workflows/: pylint.yml
asm/: cat.asm  hello.asm  prob5.asm  target  test.asm
machineCode/: prob5  test
