[tool.poetry]
name = "v-processor"
version = "0.1.0"
description = ""
authors = ["Tolia <45510494+Tolia-GH@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
